--- a/Do-Resto/Base.lproj/Main.storyboard
+++ b/Do-Resto/Base.lproj/Main.storyboard
@@ -10,11 +10,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Location View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Do_Resto" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="BYZ-38-t0r" customClass="LocationViewController" customModule="Do_Resto" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="LocationView" customModule="Do_Resto" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -62,6 +62,9 @@
                                                 <integer key="value" value="25"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="allowAction:" destination="8bC-Xf-vdC" eventType="touchUpInside" id="qKO-rc-xAL"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v2g-Ff-Son">
                                         <rect key="frame" x="32" y="58" width="350" height="50"/>
@@ -74,6 +77,9 @@
                                                 <integer key="value" value="25"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="denyAction:" destination="8bC-Xf-vdC" eventType="touchUpInside" id="rvF-EX-p3T"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <edgeInsets key="layoutMargins" top="8" left="32" bottom="8" right="32"/>
@@ -90,6 +96,10 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1EQ-99-P8D" secondAttribute="trailing" id="wTH-hH-L9V"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outlet property="allowButton" destination="aEd-da-ipi" id="7jM-7z-Tcz"/>
+                            <outlet property="denyButton" destination="v2g-Ff-Son" id="GfE-oG-IFg"/>
+                        </connections>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -99,13 +109,13 @@
         <!--Resto-->
         <scene sceneID="OKf-r4-LKT">
             <objects>
-                <tableViewController id="Bag-5G-3Km" sceneMemberID="viewController">
+                <tableViewController id="Bag-5G-3Km" customClass="RestoTableViewController" customModule="Do_Resto" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6S0-he-JVu">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RestoCell" rowHeight="400" id="o9G-x4-ibi">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RestoCell" rowHeight="400" id="o9G-x4-ibi" customClass="RestoTableViewCell" customModule="Do_Resto" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="400"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="o9G-x4-ibi" id="gvm-mE-PUz">
@@ -170,6 +180,10 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="locationLabel" destination="NLt-r6-jTB" id="ZFr-p7-D19"/>
+                                    <outlet property="markerImageView" destination="jvz-zx-h5Z" id="q1h-9K-ORV"/>
+                                    <outlet property="restoImageView" destination="jcG-Sp-LTm" id="7By-nF-lsG"/>
+                                    <outlet property="restoNameLabel" destination="Jfl-WR-cnu" id="B1j-hv-TUA"/>
                                     <segue destination="b9s-FP-XlR" kind="show" id="AB2-fj-yRg"/>
                                 </connections>
                             </tableViewCell>
@@ -188,8 +202,8 @@
         <!--Title-->
         <scene sceneID="MOR-HT-cdO">
             <objects>
-                <viewController id="b9s-FP-XlR" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="dmi-cD-kbq">
+                <viewController id="b9s-FP-XlR" customClass="DetailsFoodViewController" customModule="Do_Resto" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dmi-cD-kbq" customClass="DetailsFoodView" customModule="Do_Resto" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -345,6 +359,15 @@
                             <constraint firstItem="cNs-zP-XN8" firstAttribute="top" secondItem="NJB-CI-wbG" secondAttribute="top" id="oMG-NC-8fM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NJB-CI-wbG"/>
+                        <connections>
+                            <outlet property="collectionView" destination="Gp2-zQ-8Ow" id="iQP-GY-GQF"/>
+                            <outlet property="hoursLabel" destination="h05-L4-xSr" id="psw-lJ-6F6"/>
+                            <outlet property="locationLabel" destination="N8Y-Jo-sOC" id="3ME-Re-gX3"/>
+                            <outlet property="mapView" destination="oHf-O5-tbA" id="W1a-Sx-jV1"/>
+                            <outlet property="pageControl" destination="zAz-h1-GhI" id="C6E-hw-APB"/>
+                            <outlet property="priceLabel" destination="2Sm-R9-4zy" id="QHZ-U4-geU"/>
+                            <outlet property="ratingsLabel" destination="N4U-9V-PuC" id="aOA-Gh-Idx"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" title="Title" largeTitleDisplayMode="never" id="5fs-5I-6G5"/>
                     <size key="freeformSize" width="414" height="1024"/>
